; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_hda.c_hda_set_rirbsts.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_hda.c_hda_set_rirbsts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_softc = type { i32 }

@HDA_RIRBSTS_IRQ_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_softc*, i32, i32)* @hda_set_rirbsts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hda_set_rirbsts(%struct.hda_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hda_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.hda_softc* %0, %struct.hda_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.hda_softc*, %struct.hda_softc** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @hda_get_reg_by_offset(%struct.hda_softc* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.hda_softc*, %struct.hda_softc** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @hda_set_reg_by_offset(%struct.hda_softc* %11, i32 %12, i32 %13)
  %15 = load %struct.hda_softc*, %struct.hda_softc** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @HDA_RIRBSTS_IRQ_MASK, align 4
  %19 = and i32 %17, %18
  %20 = call i32 @hda_set_field_by_offset(%struct.hda_softc* %15, i32 %16, i32 %19, i32 0)
  %21 = load %struct.hda_softc*, %struct.hda_softc** %4, align 8
  %22 = call i32 @hda_update_intr(%struct.hda_softc* %21)
  ret void
}

declare dso_local i32 @hda_get_reg_by_offset(%struct.hda_softc*, i32) #1

declare dso_local i32 @hda_set_reg_by_offset(%struct.hda_softc*, i32, i32) #1

declare dso_local i32 @hda_set_field_by_offset(%struct.hda_softc*, i32, i32, i32) #1

declare dso_local i32 @hda_update_intr(%struct.hda_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
